# dotfiles

./: .bashrc  .czrc  .gitattributes  .gitconfig  .gitconfig-local  .gitignore  .gitmodules  .stow-local-ignore  .zshenv  Brewfile  Dockerfile  LICENSE  README.md  bootstrap.sh  composer-packages  devtools.sh  dotfiles.fish  dotfiles.sh  dotfiles.zsh  extensions.txt  go-packages  install-pkgs.sh  install.sh  npm-packages  packages.yml  setup_docker.sh  setup_kube.sh
.config/: path_add.sh  starship.toml
.config/TabNine/: .refresh_token_v2  .user_cache_v2  activities.db  data.tabnine  tabnine_config.json
.config/asdf/: npm-packages
.config/atuin/: config.toml
.config/bash/: .bashrc_extras  bashrc  init.sh
.config/bat/: config
.config/bpyutils/: config.ini
.config/btop/: btop.conf
.config/fish/: config.fish  fish_plugins  fish_variables
.config/gh/: config.yml  hosts.yml
.config/gh-dash/: config.yml
.config/git/: config  ignore
.config/k9s/: config.yaml
.config/lazydocker/: config.yml
.config/lazygit/: config.yml
.config/mise/: config.toml  default-go-packages  default-npm-packages  default-python-packages
.config/navi/: config.yaml
.config/npm/: npmrc
.config/nvim/: filetype.lua  init.lua  lazy-lock.json  lazyvim.json
.config/pypoetry/: pyproject.toml
.config/zsh/: .zshrc  (+3 more)
.github/: FUNDING.yml  sync.yml
k8s/: setup_docker.sh  setup_kube.sh
scripts/: arch.sh  brew.sh  debian.sh  docker_rootless.sh  envs.sh  fedora.sh  helpers.sh  paths.sh  python_tools.sh  setup_fish.sh  utils.sh
shared/: .env  brew  brew.sh  envs  path.sh  paths
(+165 files in other folders)
