[tool.poetry]
name = "poetry-instance"
version = "1.8.3"
description = ""
authors = []
license = ""
package-mode = false

[tool.poetry.dependencies]
python = "3.13.0"
poetry = "^1.8.3"

[tool.poetry.group.additional.dependencies]
poetry-dotenv-plugin = "^0.2.0"
poetry-multiproject-plugin = "^1.6.0"
poetry-dynamic-versioning = { extras = ["plugin"], version = "^1.4.1" }
